--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -67,15 +67,20 @@
     <Compile Include="DebitorlisteGetQueryHandler.cs" />
     <Compile Include="Core\FinansstyringQueryHandlerBase.cs" />
     <Compile Include="Core\FællesElementQueryHandlerBase.cs" />
+    <Compile Include="FirmaGetQueryHandler.cs" />
+    <Compile Include="FirmalisteGetQueryHandler.cs" />
     <Compile Include="KontoGetQueryHandler.cs" />
     <Compile Include="KontogrupperGetQueryHandler.cs" />
     <Compile Include="KontoplanGetQueryHandler.cs" />
     <Compile Include="KreditorGetQueryHandler.cs" />
     <Compile Include="KreditorlisteGetQueryHandler.cs" />
+    <Compile Include="PersonGetQueryHandler.cs" />
+    <Compile Include="PersonlisteGetQueryHandler.cs" />
     <Compile Include="PostnumreGetQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\QueryHandlerBase.cs" />
     <Compile Include="RegnskabslisteGetQueryHandler.cs" />
+    <Compile Include="TelefonlisteGetQueryHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OSDevGrp.OSIntranet.snk" />
