--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Finansstyring\RegnskabslisteHelper.cs" />
     <Compile Include="Fælles\BrevhovedlisteHelper.cs" />
     <Compile Include="Fælles\System.cs" />
+    <Compile Include="Kalender\Aftale.cs" />
+    <Compile Include="Kalender\Bruger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
