--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -15,6 +15,11 @@
     </containerConfigurationProviders>
   </iocConfiguration>
 
+  <connectionStrings>
+    <clear/>
+    <add name="OSDevGrp.OSIntranet.Repositories.MySqlClient" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
+  </connectionStrings>
+
   <appSettings>
     <add key="DebitorSaldoOverNul" value="False"/>
     <add key="KreditorSaldoOverNul" value="True"/>
