--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -14,6 +14,11 @@
     </containerConfigurationProviders>
   </iocConfiguration>
 
+  <connectionStrings>
+    <clear/>
+    <add name="OSDevGrp.OSIntranet.Repositories.MySqlClient" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
+  </connectionStrings>
+
   <appSettings>
     <add key="DebitorSaldoOverNul" value="False"/>
     <add key="KreditorSaldoOverNul" value="True"/>
