--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -16,7 +16,7 @@
 
   <connectionStrings>
     <clear/>
-    <add name="OSDevGrp.OSIntranet.Repositories.MySqlClient" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
+    <add name="OSDevGrp.OSIntranet.Repositories.DataProviders.MySqlDataProvider" connectionString="SERVER=lxweb; DATABASE=oswebdb; UID=ODBC"/>
   </connectionStrings>
 
   <appSettings>
