--- a/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
@@ -54,10 +54,12 @@
     <Compile Include="DataProxies\IDataProxyBase.cs" />
     <Compile Include="DataProxies\ILazyLoadable.cs" />
     <Compile Include="DataProxies\IMySqlDataProxy.cs" />
+    <Compile Include="DataProxies\Kalender\IBrugerProxy.cs" />
     <Compile Include="IAdresseRepository.cs" />
     <Compile Include="DataProviders\IDataProviderBase.cs" />
     <Compile Include="IDomainObjectBuilder.cs" />
     <Compile Include="IFællesRepository.cs" />
+    <Compile Include="IKalenderRepository.cs" />
     <Compile Include="IKonfigurationRepository.cs" />
     <Compile Include="IFinansstyringRepository.cs" />
     <Compile Include="IRepository.cs" />
