--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -84,9 +84,11 @@
     <Compile Include="DataProviders\MySqlDataProvider.cs" />
     <Compile Include="DataProxies\DataProxyHelper.cs" />
     <Compile Include="DataProxies\Fælles\SystemProxy.cs" />
+    <Compile Include="DataProxies\Kalender\BrugerProxy.cs" />
     <Compile Include="DomainObjectBuilder.cs" />
     <Compile Include="FinansstyringRepository.cs" />
     <Compile Include="FællesRepository.cs" />
+    <Compile Include="KalenderRepository.cs" />
     <Compile Include="KonfigurationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
