--- a/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
@@ -54,6 +54,8 @@
     <Compile Include="DataProxies\IDataProxyBase.cs" />
     <Compile Include="DataProxies\ILazyLoadable.cs" />
     <Compile Include="DataProxies\IMySqlDataProxy.cs" />
+    <Compile Include="DataProxies\Kalender\IAftaleProxy.cs" />
+    <Compile Include="DataProxies\Kalender\IBrugeraftaleProxy.cs" />
     <Compile Include="DataProxies\Kalender\IBrugerProxy.cs" />
     <Compile Include="IAdresseRepository.cs" />
     <Compile Include="DataProviders\IDataProviderBase.cs" />
