--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -83,6 +83,25 @@
           </identity>
         </endpoint>
       </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.KalenderService"
+               behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address=""
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex"
+                  binding="wsHttpBinding"
+                  bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                  contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Services"/>
+          </identity>
+        </endpoint>
+      </service>
       <service name="OSDevGrp.OSIntranet.Services.Implementations.CommonService"
                behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
         <endpoint address=""
