--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -141,6 +141,16 @@
         <identity>
           <dns value="OSDevGrp.OSIntranet.Services"/>
         </identity>
+      </endpoint      <endpoint name="KalenderServiceIntegrationstest"
+                address="http://localhost/osintranetdev/kalenderservice.svc"
+                behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
+                binding="wsHttpBinding"
+                bindingConfiguration="OSDevGrp.OSIntranet.SecureTransactionHttpBinding"
+                contract="OSDevGrp.OSIntranet.Contracts.Services.IKalenderService">
+>
+        <identity>
+          <dns value="OSDevGrp.OSIntranet.Services"/>
+        </identity>
       </endpoint      <endpoint name="CommonServiceIntegrationstest"
                 address="http://localhost/osintranetdev/commonservice.svc"
                 behaviorConfiguration="OSDevGrp.OSIntranet.EndpointBehavior"
