--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -25,6 +25,10 @@
     <add key="DageForBogføringsperiode" value="30"/>
   </appSettings>
 
+  <system.web>
+    <httpRuntime executionTimeout="300"/>
+  </system.web>
+
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
@@ -37,7 +41,7 @@
       </wsHttpBinding>
       <netTcpBinding>
         <binding name="OSDevGrp.OSIntranet.DataAccess.SecureTransactionalTcpBinding"
-                 transactionFlow="true" maxReceivedMessageSize="8388608" sendTimeout="00:03:00">
+                 transactionFlow="true" maxReceivedMessageSize="8388608" sendTimeout="00:05:00">
           <security mode="Transport">
             <transport protectionLevel="EncryptAndSign"/>
           </security>
@@ -195,4 +199,16 @@
       </behaviorExtensions>
     </extensions>
   </system.serviceModel>
+
+  <!--
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel" switchValue="Information, ActivityTracing" propagateActivity="true">
+        <listeners>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="C:\Temp\OSIntranet.svclog"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
+  -->
 </configuration>
