--- a/OSDevGrp.OSIntranet.Tests/App.config
+++ b/OSDevGrp.OSIntranet.Tests/App.config
@@ -222,6 +222,7 @@
         </behavior>
         <behavior name="OSDevGrp.OSIntranet.DataAccess.EndpointBehavior">
           <dataContractSerializer maxItemsInObjectGraph="2097152"/>
+          <callbackTimeouts transactionTimeout="00:03:00"/>
         </behavior>
       </endpointBehaviors>
     </behaviors>
